<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_green_50"
    tools:context="view.tabs.addFavor.FavorRequestView">

    <!-- add above: android:background="@color/material_green_50"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_req_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/edit_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_request_view">

            <Button
                android:id="@+id/edit_favor_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_edit_24dp"
                android:text="@string/edit_favor"
                android:visibility="invisible"
                app:layout_constraintRight_toLeftOf="@id/request_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancel_favor_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/fui_transparent"
                android:drawableEnd="@drawable/ic_cancel_24dp"
                android:text="@string/cancel_request"
                android:visibility="invisible"
                app:layout_constraintLeft_toRightOf="@id/edit_favor_button"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favor_confirm_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_request_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
            android:hint="@string/favor_title_hint"
            android:inputType="textShortMessage"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_button" />


        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/favor_details_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="7"
            android:minLines="5"
            android:scrollbars="vertical"

            app:layout_constraintTop_toBottomOf="@id/title_request_view" />

        <LinearLayout
            android:id="@+id/picture_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details">

            <Button
                android:id="@+id/add_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:drawableRight="@drawable/ic_image_24dp"
                android:text="Upload" />

            <Button
                android:id="@+id/add_camera_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_photo_camera_24dp"
                android:text="Take" />

        </LinearLayout>


        <ImageView
            android:id="@+id/image_view_request_view"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/favor_img_content_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@id/picture_buttons" />

        <TextView
            android:id="@+id/favor_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/request_button" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/request_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>