...

    <!-- TAB 2 (David) -->
    <string name="favor_title_hint">What do you need? Max.length=%d</string>
    <string name="favor_details_hint">Add more details - Max. length = %d</string>
    <string name="favor_payment_hint">Add payment (Default: free favor)</string>
    <string name="favor_no_active_favor">You have no active favors</string>
    <string name="favor_no_archived_favor">You have no archived favors</string>
    <string name="active_favors_text">Active</string>
    <string name="archived_favors_text">Archived</string>

    <string name="favo_coins_item_placeholder">%d</string>
    <string name="user_name_item_placeholder">%s</string>

...
    <string name="nav_header_desc">Navigation Header</string>
    <string name="app_lema">Help others help you</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!--Favor search bar -->
    <string name="searchView_title">Search View</string>
    <string name="query_failed"> No results found</string>
    <string name="empty"> </string>
    <string name="query_hint">Enter search</string>

    <string name="favors_retrieval_failed_message">An error occurred. Check your internet connection</string>
    <string name="select_image_text">Select Image</string>

...
